--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "canvaskit-wasm": "^0.15.0",
+    "lodash.isequal": "^4.5.0",
     "mdi-material-ui": "^6.16.0",
     "mobx": "^5.15.4",
     "react": "^16.13.1",
